@@ -7,6 +7,7 @@ import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Component;
 import uk.gov.hmcts.ccd.sdk.type.ListValue;
 import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
+import uk.gov.hmcts.sptribs.caseworker.model.CaseIssueDecision;
 import uk.gov.hmcts.sptribs.ciccase.model.CaseData;
 import uk.gov.hmcts.sptribs.ciccase.model.CicCase;
 import uk.gov.hmcts.sptribs.ciccase.model.NotificationResponse;
@@ -21,15 +22,14 @@ import java.io.IOException;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import javax.servlet.http.HttpServletRequest;
 
 import static org.springframework.http.HttpHeaders.AUTHORIZATION;
 import static uk.gov.hmcts.sptribs.common.CommonConstants.DECISION_NOTICE;
+import static uk.gov.hmcts.sptribs.common.CommonConstants.INDEX;
 
 @Component
 @Slf4j
-@SuppressWarnings({"squid:S6204"})
 public class DecisionIssuedNotification implements PartiesNotification {
 
     @Autowired
@@ -129,20 +129,14 @@ public class DecisionIssuedNotification implements PartiesNotification {
         final String authorisation = httpServletRequest.getHeader(AUTHORIZATION);
         String serviceAuthorization = authTokenGenerator.generate();
 
-        CicCase cicCase = caseData.getCicCase();
-        /*if (caseIssueDecision.getDecisionDocument() != null) {
-            List<String> uploadedDocumentsUrls = caseIssueDecision.getDecisionDocument().stream().map(item -> item.getValue())
+        CaseIssueDecision caseIssueDecision = caseData.getCaseIssueDecision();
+        if (caseIssueDecision.getDecisionDocument() != null) {
+            List<String> uploadedDocumentsUrls = caseIssueDecision.getDecisionDocument().stream().map(ListValue::getValue)
                 .map(item -> StringUtils.substringAfterLast(item.getDocumentLink().getUrl(), "/"))
-                .collect(Collectors.toList());*/
+                .toList();
 
-        //TODO: Remove the below code once tested. Added this for testing if the issue is with the DecisionNotice document
-        if (cicCase.getApplicantDocumentsUploaded() != null) {
-            List<String> uploadedDocumentsUrls = cicCase.getApplicantDocumentsUploaded().stream().map(ListValue::getValue)
-                .map(item -> StringUtils.substringAfterLast(item.getDocumentLink().getUrl(), "/"))
-                .collect(Collectors.toList());
-
-            count++;
             for (String item : uploadedDocumentsUrls) {
+                count++;
 
                 Resource uploadedDocument = caseDocumentClient.getDocumentBinary(authorisation,
                     serviceAuthorization,
@@ -151,6 +145,7 @@ public class DecisionIssuedNotification implements PartiesNotification {
                 if (uploadedDocument != null) {
                     log.info("Document found with uuid : {}", UUID.fromString(item));
                     byte[] uploadedDocumentContents = uploadedDocument.getInputStream().readAllBytes();
+                    templateVars.put(INDEX + count, count);
                     templateVars.put(DECISION_NOTICE + count, notificationService.getJsonFileAttachment(uploadedDocumentContents));
                 } else {
                     log.info("Document not found with uuid : {}", UUID.fromString(item));
